# reactor

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
debug_unreachable/: fn.__unreachable.html  index.html  macro.debug_unreachable!.html  sidebar-items.js
docs/: design.md
examples/: benchmark.rs  echo.rs
futf/: enum.Meaning.html  fn.classify.html  index.html  struct.Codepoint.html
mac/: index.html  macro.addrs_of!.html  macro.do_while!.html  macro.ext_bail!.html  macro.ext_bail_if!.html  macro.ext_expect!.html  macro.format_if!.html  macro.matches!.html  macro.test_eq!.html  macro.unwrap_or_return!.html  sidebar-items.js
reactor/: enum.ConnResult.html  enum.EventType.html  index.html  sidebar-items.js  struct.EventSet.html  struct.Reactor.html  struct.ReactorCtrl.html  struct.Token.html  trait.Context.html  trait.Evented.html  type.ConnHandler.html  type.ListenRec.html  type.TimeoutHandler.html  type.TimerRec.html
slab/: struct.SlabIter.html  struct.SlabMutIter.html
src/: context.rs  lib.rs  reactor.rs  reactor_ctrl.rs  reactor_handler.rs  reactor_inner.rs  utils.rs
tendril/: enum.SubtendrilError.html  index.html  macro.format_tendril!.html  sidebar-items.js  struct.Atomic.html  struct.NonAtomic.html  struct.SendTendril.html  struct.Tendril.html  trait.Atomicity.html  trait.ReadExt.html  trait.SliceExt.html  type.ByteTendril.html  type.StrTendril.html
unreachable/: fn.unreachable.html  index.html  trait.UncheckedOptionExt.html  trait.UncheckedResultExt.html
void/: enum.Void.html  fn.unreachable.html  index.html  (+2 more)
(+285 files in other folders)
